[project]
name = "react-agent"
version = "0.1.0"
description = "LangGraph ReAct agent"
authors = [
    {name = "Viktor Szabo",email = "vszabo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
